vertical alignment fix for table header

--- a/app/NovaWeb/src/styles/partials/_aggrid.scss
+++ b/app/NovaWeb/src/styles/partials/_aggrid.scss
@@ -4,7 +4,6 @@ $has-children-padding-before-arrow: 3px;
 .project-explorer {
     .ag-grid {
         height: 100%;
-        padding-top: 5px;
         // removes focus globally inside ag-grid. May need to be reworked
         *:focus {
             outline: none;
@@ -15,6 +14,7 @@ $has-children-padding-before-arrow: 3px;
         }
 
         .ag-header-cell {
+            line-height: 20px;
             text-align: left;
 
             .ag-header-cell-text {
